--- a/EcoFriendly/eco/templates/eco/all_actions.html
+++ b/EcoFriendly/eco/templates/eco/all_actions.html
@@ -4,14 +4,15 @@
 All Actions Page
 {% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+<!-- All Action Page -->
 {% block content %}
+<!-- Div for chart area -->
 <div class="graph"> 
   <h2 class="titles">Actions by Location (Pie Chart)</h2>
   <div class="chart">
      <canvas id="locationChart"></canvas>
   </div>
-
+<!-- using javascript to add the chart based on locations -->
   <script>
     const labels = JSON.parse('{{ labels|escapejs }}');
     const data = JSON.parse('{{ counts|escapejs }}');
@@ -38,14 +39,15 @@ All Actions Page
     });
   </script>
 </div>
-
+<!-- All Action section -->
 <div class="title d-flex justify-content-between align-items-center mb-4">
   <h3 class="title mb-0 label-all">All Actions</h3>
-
+ <!-- Drop dowm menue for -->
   <form method="get" action="{% url 'eco:all_action_view' %}" class="d-flex align-items-end">
-    <div class="me-3">
-      <label for="category" class="form-label mb-1 label-all">Location</label>
-      <select class="form-select form-select-sm" id="category" name="location">
+    <div class="d-flex align-items-center gap-2">
+      <label for="location" class="form-label mb-0 label-all">Location:</label>
+      <select class="form-select form-select-sm" id="location" name="location">
+        <!--Display location choices -->
         <option value="all">All locations</option>
         {% for value, label in LocationChoices %}
           <option value="{{ value }}" {% if value == selected_location %}selected{% endif %}>{{ label }}</option>
@@ -53,6 +55,7 @@ All Actions Page
       </select>
     </div>
     <div>
+      <!-- filter -->
       <button type="submit" class="btn btn-success btn-dark btn-sm filter">Filter</button>
     </div>
   </form>
@@ -61,11 +64,13 @@ All Actions Page
 
 <div class="row latest-actions-row">
   {% if page_obj %}
+  <!-- All action cards divided into pages ( 3 actions  on 1 page )-->
     {% for action in page_obj %}
       <div class="col-md-4 col-lg-3 mb-4 d-flex">
         <div class="card eco-card">
           <img src="{{ action.image.url }}" class="card-img-top" alt="{{ action.title }}" />
           <div class="card-body">
+            <br>
             <h6 class="eco-card-title mb-2">{{ action.title }}</h6>
             <p>
               {{ action.description|truncatewords:5 }}...
@@ -73,7 +78,8 @@ All Actions Page
             </p>
             <p><strong>📍 {{ action.location }}</strong></p>
              {% if action.avg_rating %}
-  <p>
+  <p> 
+     <!-- Print the average based on AVG library -->
             Average Review:
             {% if action.avg_rating|floatformat:0 == "1" %} 👍🏻 Try Harder
             {% elif action.avg_rating|floatformat:0 == "2" %} 🎉 Keep Going
@@ -93,7 +99,7 @@ All Actions Page
   {% endif %}
 </div>
 
-
+<!-- Pagination section -->
 {% if page_obj.has_other_pages %}
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
@@ -125,5 +131,4 @@ All Actions Page
   </ul>
 </nav>
 {% endif %}
-
 {% endblock %}
