--- a/EcoFriendly/eco/templates/eco/detail.html
+++ b/EcoFriendly/eco/templates/eco/detail.html
@@ -5,25 +5,39 @@ Detailed Action Page
 {% endblock %}
 
 {% block content %}
+
 <!--Detail Page -->
 <div class="container mt-5">
+     {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-success">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+      
   <div class="row">
     <div class="col-6">
+      <!-- Uplaoded photo based on this action -->
       <img src="{{ action.image.url }}" class="img-fluid rounded" style="max-height: 400px; object-fit: cover;" alt="{{ action.title }}">
     </div>
     <div class="col-6">
+      <!--Detailes of the action -->
       <h2 class="fw-bold">{{ action.title }}</h2>
       <p class="text-muted">{{ action.location }}</p>
       <p>{{ action.description }}</p>
     </div>
   </div>
    <div class="d-flex justify-content-end gap-2">
+              <!--Update button -->
                <a href="{% url 'eco:update_view' action.id %}" class="btn btn-primary update" >Update</a>
+               <!-- Delete button -->
                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Delete
                </button>
             </div>
 </div>
+<!-- Pop up window to check if the user sure want to delete this action -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -36,15 +50,17 @@ Detailed Action Page
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <!-- Delete the action -->
         <a href="{% url 'eco:delete_view' action.id %}" class="btn btn-danger" >Delete</a>
       </div>
     </div>
   </div>
 </div>
-
+<!--Comments section -->
 <h2 class="comment">Comments [{{ comments.count }}]</h2>
 
 <div class="row g-4">
+  <!-- Display all comments related to this action -->
   {% for comment in comments %}
     <div class="col d-flex">
       <div class="card border-0 h-100">
@@ -59,6 +75,7 @@ Detailed Action Page
 
 <br> 
 <br>
+<!--Comment form -->
 <h2 class="comment">Add Comment</h2>
 <div class="container">
 <form class="d-flex flex-column gap-2  w-100" action="{% url 'eco:add_comment_view' action.id %}" method="post">
@@ -67,6 +84,7 @@ Detailed Action Page
   <div class="d-flex gap-2 align-items-center"> 
   <h5 class="m-0 p-0">review:</h5>
   <div class="Location"> 
+    <!-- Ratimg choices -->
     {% for val, label in RatingChoices %}
       <input type="radio" id="{{val}}" name="rating" value="{{val}}" required>
       <label for="{{val}}">{{label}}</label>
