--- a/EcoFriendly/main/templates/main/messages.html
+++ b/EcoFriendly/main/templates/main/messages.html
@@ -3,10 +3,11 @@
 {% block title %}
 Messages Page
 {% endblock %}
-
+<!-- messages page -->
 {% block content %}
 <h4 class="message"> Messages from Users</h4>
   <div class="row">
+    <!--Loop to display all messages -->
     {% for message in messages %}
     <div class="col-md-4 col-lg-3 mb-4 d-flex align-items-stretch">
       <div class="card border-0">
