--- a/EcoFriendly/eco/templates/eco/all_actions.html
+++ b/EcoFriendly/eco/templates/eco/all_actions.html
@@ -56,7 +56,7 @@ All Actions Page
     </div>
     <div>
       <!-- filter -->
-      <button type="submit" class="btn btn-success btn-dark btn-sm filter">Filter</button>
+      <button type="submit" class="btn btn-success btn-sm filter">Filter</button>
     </div>
   </form>
 </div>
@@ -88,7 +88,7 @@ All Actions Page
             {% endif %}
           </p>
         {% else %}
-          <p>No ratings yet</p>
+          <p>Average Review: No ratings yet</p>
         {% endif %}
           </div>
         </div>
