--- a/EcoFriendly/eco/templates/eco/detail.html
+++ b/EcoFriendly/eco/templates/eco/detail.html
@@ -15,19 +15,22 @@ Detailed Action Page
           </div>
         {% endfor %}
       {% endif %}
-      
   <div class="row">
-    <div class="col-6">
-      <!-- Uplaoded photo based on this action -->
-      <img src="{{ action.image.url }}" class="img-fluid rounded" style="max-height: 400px; object-fit: cover;" alt="{{ action.title }}">
-    </div>
-    <div class="col-6">
-      <!--Detailes of the action -->
-      <h2 class="fw-bold">{{ action.title }}</h2>
-      <p class="text-muted">{{ action.location }}</p>
-      <p>{{ action.description }}</p>
-    </div>
+ <!-- Uplaoded photo based on this action -->
+  <div class="col-12 col-md-6 mb-3">
+    <img src="{{ action.image.url }}" class="img-fluid rounded w-100" style="max-height: 400px; object-fit: cover;" alt="{{ action.title }}">
   </div>
+
+  <!--Detailes of the action -->
+  <div class="col-12 col-md-6">
+    <h2 class="fw-bold">{{ action.title }}</h2>
+    <p class="text-muted">📍 {{ action.location }}</p>
+    <br>
+    <p>Description:</p>
+    <p>{{ action.description }}</p>
+  </div>
+</div>
+    
    <div class="d-flex justify-content-end gap-2">
               <!--Update button -->
                <a href="{% url 'eco:update_view' action.id %}" class="btn btn-primary update" >Update</a>
@@ -56,15 +59,17 @@ Detailed Action Page
     </div>
   </div>
 </div>
+<br>
+<hr>
 <!--Comments section -->
 <h2 class="comment">Comments [{{ comments.count }}]</h2>
 
-<div class="row g-4">
+<div class="row row-cols-1 row-cols-md-3 g-3">
   <!-- Display all comments related to this action -->
   {% for comment in comments %}
     <div class="col d-flex">
-      <div class="card border-0 h-100">
-        <div class="card-body d-flex flex-column">
+      <div class="card border-2 h-100 w-100">
+        <div class="card-body d-flex flex-column text-center">
           <p class="flex-grow-1">{{ comment.content }}</p>
           <p class="flex-grow-1">{{ comment.get_rating_display }}</p>
         </div>
@@ -75,10 +80,11 @@ Detailed Action Page
 
 <br> 
 <br>
+
 <!--Comment form -->
 <h2 class="comment">Add Comment</h2>
-<div class="container">
-<form class="d-flex flex-column gap-2  w-100" action="{% url 'eco:add_comment_view' action.id %}" method="post">
+<div class="col-lg-8 add-comment">
+<form class="d-flex flex-column gap-2" action="{% url 'eco:add_comment_view' action.id %}" method="post">
     {% csrf_token %}
     <textarea class="form-control" name="content" required minlength="3" placeholder="content"></textarea>
   <div class="d-flex gap-2 align-items-center"> 
