--- a/EcoFriendly/main/templates/main/home.html
+++ b/EcoFriendly/main/templates/main/home.html
@@ -56,7 +56,7 @@ Home Page
             {% endif %}
           </p>
         {% else %}
-          <p>No ratings yet</p>
+          <p>Average Review: No ratings yet</p>
         {% endif %}
           </div>
         </div>
