--- a/EcoFriendly/main/templates/main/messages.html
+++ b/EcoFriendly/main/templates/main/messages.html
@@ -6,12 +6,12 @@ Messages Page
 <!-- messages page -->
 {% block content %}
 <h4 class="message"> Messages from Users</h4>
-  <div class="row">
+  <div class="row g-3">
     <!--Loop to display all messages -->
     {% for message in messages %}
     <div class="col-md-4 col-lg-3 mb-4 d-flex align-items-stretch">
-      <div class="card border-0">
-        <div class="card-body">
+      <div class="card border-2 h-100 w-100">
+        <div class="card-body text-center">
           <h5 class=" mb-1 text-dark">
             {{message.first_name}} {{message.last_name}}
           </h5>
