--- a/EcoFriendly/quiz/templates/quiz/all_questions.html
+++ b/EcoFriendly/quiz/templates/quiz/all_questions.html
@@ -24,12 +24,12 @@ All Questions Page
   <a href="{% url 'quiz:add_question_view' %}" class="btn btn-primary btn-dark add">Add Question</a>
 </div>
 <!-- Div to display all questions -->
-<div class="row g-4">
+<div class="row row-cols-1 row-cols-md-3 g-3">
   {% if questions %}
     {% for question in questions %}
-      <div class="col-md-4 col-lg-3 d-flex">
-        <div class="card eco-card w-100 shadow-sm">
-          <div class="card-body d-flex flex-column">
+      <div class="row-cols-md-3 d-flex">
+        <div class="card eco-card h-100 w-100 border-2 shadow-sm">
+          <div class="card-body d-flex flex-column text-center">
             <h6 class="card-title mb-3">{{ question.question }}</h6>
             <div class="mt-auto d-flex justify-content-end gap-2">
               <!--Update button -->
